Подписки на авторов (Переписан проект). Вариант №1

--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -6,6 +6,45 @@
     <p>... Я пока чувствую себя неуверенно на позиции Backend Web Developer. Кратко о себе.</p>
 <p>
     Меня зовут Илья Кудряшов и я студент магистратуры Университета ИТМО.
-    Прохожу обучение в "Яндекс-практикум" на курсе "Python-разработчик".
+    Прохожу обучение в "Яндекс.Практикум" на курсе "Python-разработчик".
+</p>
+<h3><a href="https://vk.com/wall-74237835_2322"> Участвовал в конкурсе «Путь к карьере-2023»</a></a></h3>
+<p>
+    30 марта в Park Inn by Radisson Pribaltiyskaya Hotel & Congress Center состоялся долгожданный финал конкурса для молодых специалистов с инвалидностью «Путь к карьере-2023» в Санкт-Петербурге.
+</p>
+<p>
+    Восьмой ежегодный конкурс проводится при поддержке Благотворительного Фонда Абсолют-Помощь; с использованием гранта Президента Российской Федерации на развитие гражданского общества, предоставленного Фондом президентских грантов; компании ПАО «МТС» и Совета бизнеса по вопросам инвалидности.
+</p>
+<p>
+    Цель конкурса - помочь молодым людям с инвалидностью реализовать свой потенциал, найти свое место в обществе и добиться успеха на профессиональном поприще.
+</p>
+<p>
+    На протяжении двух месяцев 16 молодых специалистов с инвалидностью учились выступать публично, составлять резюме, проходить тестовые интервью и развивали коммуникативные навыки, чтобы на финале пройти собеседования с представителями ключевых петербургских компаний, рассказать о себе жюри в формате индивидуальной презентации и проявить свои soft skills в командной деловой игре.
+</p>
+<p>
+    Победителей выбирала команда экспертов — представителей компаний занимающихся инклюзией. По результатам оценки этапа самопрезентаций и деловой игры членами жюри были выбраны победители:
+</p>
+<p>
+    1 место — архитектор Ольга Гурьянова
+    <br>
+        2 место — специалист по корпоративной культуре Екатерина Вохменцева
+    </br>
+    
+    <strong>
+        3 место — аналитик в области информационной безопасности Илья Кудряшов
+    </strong> 
+    и интернет-маркетолог в сфере гостиничного бизнеса Анастасия Сенина
+</p>
+<p>
+    «Путь к карьере» - это не только конкурс, но и возможность для молодых людей с инвалидностью показать свои таланты и обрести поддержку на старте профессиональной карьеры, а также реальный шанс получить предложение о стажировке или работе в бизнес-сфере.
+</p>
+<p>
+    Благодарим за помощь в организации образовательной части конкурса и наставничества компании ООО «Газпром инвест», Главстрой СПб, Технологии доверия, Hilton Saint Petersburg ExpoForum, HeadHunter, Ancor, группу компаний Ингка Россия, молодежный центр «Среда», молодежное пространство «Вектор», библиотеку для слепых и слабовидящих «Точки зрения».
+</p>
+<p>
+    За помощь в организации финальной части конкурса выражаем благодарность компаниям ООО «Газпром инвест», Главстрой СПб, Технологии доверия, Hilton Saint Petersburg ExpoForum, Ancor, группе компаний Ингка Россия, группе компаний «Б1», Работа-i, Авито, АО «ПИ-2», Antal Talent, Park Inn by Radisson Pribaltiyskaya Hotel & Congress Center, независимому эксперту Инне Николаевой, волонтерскому отряду ГУАП «ЭВОлюция».
+</p>
+<p>
+    Надеемся, что конкурс будет проводиться и дальше, и поможет еще большему числу людей с инвалидностью найти работу и достичь успеха в профессиональной сфере.
 </p>
 {% endblock %}
