Подписки на авторов (Переписан проект). Вариант №2

--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -47,4 +47,5 @@
 <p>
     Надеемся, что конкурс будет проводиться и дальше, и поможет еще большему числу людей с инвалидностью найти работу и достичь успеха в профессиональной сфере.
 </p>
+<img src="https://img-20.wfolio.com/4HA7Eg1mPd5mv3Rsl6zvuj3pFF1qIPLBovcDs2QWG0M/rs:fit:1920:0:0/cb:v2/aHR0cDovL2Rpc2su/d2ZvbGlvLnJ1L2Rp/c2tzLzUwNDIzL3By/b2plY3RzLzIzMjc4/NDQvcHJldmlld3Mv/MTY4MDI2ODYzMF8w/OTUwNzAuanBn.jpg" alt="Автор" width="853.5" height="1280">
 {% endblock %}
